Alteração de DTO
